svyThemeRoller/medias/themes/theme-servoy.less
/* ... */
.svy-tabpanel.bg-tertiary > .nav-tabs > li > a,
.bts-tabpanel.bg-tertiary > .nav-tabs > li > a {
	background-color: @brand-tertiary;
	background-color: @brand-tertiary-inverse;
}

.svy-tabpanel.bg-tertiary > .nav-tabs > li.active > a, 
.svy-tabpanel.bg-tertiary > .nav-tabs > li.active > a:hover, 
.svy-tabpanel.bg-tertiary > .nav-tabs > li.active > a:focus,
.bts-tabpanel.bg-tertiary > .nav-tabs > li.active > a, 
.bts-tabpanel.bg-tertiary > .nav-tabs > li.active > a:hover, 
.bts-tabpanel.bg-tertiary > .nav-tabs > li.active > a:focus {
	background-color: @brand-tertiary;
	background-color: @brand-tertiary-inverse;
	border-color: @main-color;
}

/* Font Awesome *
data-servoyextra-fontawesome > div {
	display: inline;
	float: left;
	font-size: 18px;
	margin : 0 15px;
}
*/

/* Sidenav Servoy Extra */

#svy-sidenav();

.svy-sidenav-secondary {
	
	@sidenav-color: @sidenav-secondary-color;
	@sidenav-text-color: @sidenav-secondary-text-color;
	@sidenav-text-font-size: @sidenav-secondary-text-font-size;
	@sidenav-border-width: @sidenav-secondary-border-width;
	@sidenav-border-color: @sidenav-secondary-border-color;
	@sidenav-selected-color: @sidenav-secondary-selected-color;
	@sidenav-selected-text-color: @sidenav-secondary-selected-text-color;
	@sidenav-selected-border-color: @sidenav-secondary-selected-border-color;
	@sidenav-selected-border-width: @sidenav-secondary-selected-border-width;
	
	#svy-sidenav();
		
	/* apply the style to .svy-sidenav */
	background-color: @sidenav-color;
	color: @sidenav-text-color;
	border-width: @sidenav-border-width;
	border-color: @sidenav-border-color;
}

#svy-sidenav {

	.svy-sidenav {
		background-color: @sidenav-color;
		color: @sidenav-text-color;
		border-width: @sidenav-border-width;
		border-color: @sidenav-border-color;
	}
	
	.svy-sidenav-menu,
	.svy-sidenav-collapse-icon {
		font-size: 12px;
		line-height: 36px;
		color: @sidenav-text-color;
	}
	
	.svy-sidenav-divider {
		line-height: 0px;
		padding: 0;
		margin: 0;
	}
	
	.svy-sidenav-item {
		font-size: @sidenav-text-font-size;
	}
	
	.svy-sidenav-dropdown {
		background-color: @sidenav-color;
		color: @sidenav-text-color;
		font-weight: initial;
	}
	
	/* Override padding to obtain hover effect */
	.svy-sidenav-menu ul {
	    padding-left: 0px;
	}
	
	.svy-sidenav-item {
		padding: 7px 15px 7px 20px;
	}
	
	.svy-sidenav-item.sn-level-2 {
		padding-left: 40px;
	}
	
	.svy-sidenav-item.sn-level-3 {
		padding-left: 60px;
	}
	
	.svy-sidenav-item.sn-level-4 {
		padding-left: 80px;
	}
	
	/*
	.svy-sidenav-dropdown.sn-level-2 {
		margin-left: -20px;
		padding-left: 20px;
	}
	
	.svy-sidenav-item.sn-level-2 {
		margin-right: 0;
	}
	
	.svy-sidenav-dropdown.sn-level-3 {
		margin-left: -40px;
		padding-left: 40px;
	}
	
	.svy-sidenav-dropdown.sn-level-4 {
		margin-left: -60px;
		padding-left: 60px;
	}*/
	
	.svy-navitem-selected {
		/* TODO inverse the column when selected */
		color: @sidenav-selected-text-color;
		background-color: @sidenav-selected-color;
	}
	
	.svy-navitem-selected.sn-level-1 {
		border-style: solid;
		border-color: @sidenav-selected-border-color;
		border-width: @sidenav-selected-border-width;
	}
	
	/* When sidenav selected item has border, compensate non-selected items with paddings. */
	.svy-sidenav-dropdown.sn-level-1:not(.svy-navitem-selected) when not(@sidenav-selected-border-width = 0) {
		padding: @sidenav-selected-border-width; /* align non selected items with the selected item */
		padding-top: 0;
		padding-bottom: 0;
	}
	
	.svy-sidenav-item:hover,
	.svy-sidenav-item:hover > .svy-sidenav-collapse-icon,
	.svy-sidenav-dropdown.sn-level-2:hover,
	.svy-sidenav-dropdown.sn-level-3:hover,
	.svy-sidenav-dropdown.sn-level-4:hover {
		/* TODO inverse the column when selected ! */
		color: @sidenav-selected-text-color;
		background-color: @sidenav-selected-color;
	}
}

/* Navbar Bootstrap Extra */
.navbar {
	border-radius: 0;
}

.bts-extra-navbar.navbar-default {
	background-color: @navbar-bg;
	color: @navbar-text-color;
	margin-bottom: 0;
	border: 0;
}

.bts-extra-navbar.navbar-default .navbar-brand {
	color: @navbar-text-color;
}

.bts-extra-navbar.navbar-default .navbar-nav > li > a,
.bts-extra-navbar.navbar-default .navbar-nav > .active > a, 
.bts-extra-navbar.navbar-default .navbar-default .navbar-nav > .active > a:hover, 
.bts-extra-navbar.navbar-default .navbar-default .navbar-nav > .active > a:focus,
.bts-extra-navbar.navbar-default .navbar-nav > .open > a, 
.bts-extra-navbar.navbar-default .navbar-nav > .open > a:hover, 
.bts-extra-navbar.navbar-default .navbar-nav > .open > a:focus
 {
	background-color: @navbar-bg;
	color: @navbar-text-color;
}

.bts-extra-navbar.navbar-default .navbar-nav > .active > a, 
.bts-extra-navbar.navbar-default .navbar-default .navbar-nav > .active > a:hover, 
.bts-extra-navbar.navbar-default .navbar-default .navbar-nav > .active > a:focus,
.bts-extra-navbar.navbar-default .navbar-nav > .active.open > a, 
.bts-extra-navbar.navbar-default .navbar-nav > .active.open > a:hover, 
.bts-extra-navbar.navbar-default .navbar-nav > .active.open > a:focus {
	background-color: @navbar-active-bg;
	color: @navbar-active-text-color;
	border-color: @navbar-active-border-color;
	border-width: @navbar-active-border-width;
	border-style: solid;
}

.bts-extra-navbar.navbar-default .dropdown-menu,
.bts-extra-navbar.navbar-default .navbar-nav .open .dropdown-menu > li > a {
	background-color: @navbar-bg;
	color: @navbar-text-color;
}

.bts-extra-navbar.navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, 
.bts-extra-navbar.navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
	background-color: @navbar-bg-highlighted;
}

.bts-extra-navbar.navbar-default .navbar-toggle {
	background-color: @navbar-bg;
	color: @navbar-text-color;
}

.bts-extra-navbar.navbar-default .navbar-toggle:hover, 
.bts-extra-navbar.navbar-default .navbar-toggle:focus {
	background-color: @navbar-bg-highlighted;
}
/* ... */

